--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ MYSQL_EFAD_NEWFORMAZIONEIN=newformazionein
 MYSQL_SITE_NEWFORMAZIONE=newformazione
 
 PORT=4200
-VITE_BACKEND_URL=https://rbcms.formazioneintermediari.com
-VITE_FRONTEND_URL=https://rbcms.formazioneintermediari.com
+VITE_BACKEND_URL=https://stagingrb.formazioneintermediari.com
+VITE_FRONTEND_URL=https://stagingrb.formazioneintermediari.com
 MYSQL_USER=rbuser
 MYSQL_PASSWORD=bargab
