--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 
-FRONTEND_URL=https://rbcms.formazioneintermediari.com
-BACKEND_URL=https://rbcms.formazioneintermediari.com
+FRONTEND_URL=https://stagingrb.formazioneintermediari.com
+BACKEND_URL=https://stagingrb.formazioneintermediari.com
 PORT=4200
 MYSQL_IFAD=ifad.formazioneintermediari.com
 MYSQL_EFAD=efad.formazioneintermediari.com
