--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^41.4.2",
+    "@ckeditor/ckeditor5-react": "^11.0.0",
     "@ffprobe-installer/ffprobe": "^2.1.2",
     "@fullcalendar/core": "^6.1.19",
     "@fullcalendar/daygrid": "^6.1.19",
@@ -26,11 +28,14 @@
     "@stripe/stripe-js": "^7.7.0",
     "@supabase/supabase-js": "^2.53.0",
     "@tailwindcss/typography": "^0.5.15",
+    "ckeditor": "^4.12.1",
+    "ckeditor4-react": "^5.2.1",
     "class-variance-authority": "^0.7.0",
     "classix": "^2.2.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "cx": "^24.10.11",
+    "dayjs": "^1.11.19",
     "fluent-ffmpeg": "^2.1.3",
     "framer-motion": "^11.18.2",
     "fullcalendar": "^6.1.19",
@@ -38,6 +43,7 @@
     "langfuse": "^3.29.1",
     "lucide-react": "^0.456.0",
     "path": "^0.12.7",
+    "prettier": "^3.6.2",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
